fix jumpy content area

--- a/sites/all/themes/impetus/assets/stylesheets/screen.css
+++ b/sites/all/themes/impetus/assets/stylesheets/screen.css
@@ -523,3 +523,7 @@ white-space:normal;
 .comment .media, .comment .media-body {
 	overflow: visible;
 }
+
+#main-wrapper #main {
+	margin-top:80px !important;
+}
